--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <img src="assets/img/creative/about.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-6 text-center">
-                    <h1>Hi, I'm John Smith</h1>
+                    <h1>Hi, I'm Derek</h1>
                     <hr class="colored">
                     <p>I am a freelance web designer, developer, and photographer based in San Francisco, California. I have a professional background in graphic design, and a degree in Computer Science from the University of Central California.</p>
                     <p>Whether your next project is an online store, website for your business, or a simple brochure, I'll be ready to help!</p>
@@ -132,28 +132,28 @@
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".2s">
                     <div class="about-content">
                         <i class="fa fa-laptop fa-4x"></i>
-                        <h3>Web Design</h3>
+                        <h3>Biomedical Engineering</h3>
                         <p>This theme includes the retina.js plugin for easy retina image support so your images and graphics will look great on mobile devices!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                     <div class="about-content">
                         <i class="fa fa-code fa-4x"></i>
-                        <h3>Web Development</h3>
+                        <h3>Robotics</h3>
                         <p>Vitality is built using Bootstrap 3, and is easy to edit and customize. LESS files are included as well for deeper customization.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
                         <i class="fa fa-camera-retro fa-4x"></i>
-                        <h3>Photography</h3>
+                        <h3>Software Engineering</h3>
                         <p>When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
                         <i class="fa fa-paint-brush fa-4x"></i>
-                        <h3>Graphic Design</h3>
+                        <h3>Education</h3>
                         <p>All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible.</p>
                     </div>
                 </div>
@@ -685,7 +685,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive img-centered" alt="">
-                            <h2>Project Title</h2>
+                            <h2>Brain-Computer Interface</h2>
                             <hr class="colored">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos modi in tenetur vero voluptatum sapiente dolores eligendi nemo iste ea. Omnis, odio enim sint quam dolorum dolorem. Nostrum, minus, ad.</p>
                         </div>
