--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
                     <div class="about-content">
                         <i class="fa fa-laptop fa-4x"></i>
                         <h3>Biomedical Engineering</h3>
-                        <p>This theme includes the retina.js plugin for easy retina image support so your images and graphics will look great on mobile devices!</p>
+                        <p>Columbia University</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                     <div class="about-content">
                         <i class="fa fa-code fa-4x"></i>
-                        <h3>Robotics</h3>
-                        <p>Vitality is built using Bootstrap 3, and is easy to edit and customize. LESS files are included as well for deeper customization.</p>
+                        <h3>Software Engineering</h3>
+                        <p>Neuromatters</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
                         <i class="fa fa-camera-retro fa-4x"></i>
-                        <h3>Software Engineering</h3>
-                        <p>When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet!</p>
+                        <h3>Robotics</h3>
+                        <p>Honeybee Robotics</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
                         <i class="fa fa-paint-brush fa-4x"></i>
                         <h3>Education</h3>
-                        <p>All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible.</p>
+                        <p>Coalition for Queens</p>
                     </div>
                 </div>
             </div>
@@ -249,8 +249,8 @@
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <span class="project-name">Brain-Computer Interface</span>
+                            <span class="project-description">The Link Between Human and Machine</span>
                             <hr class="colored">
                             <a href="#portfolioModal1" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
