--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
+                        <img src="" class="img-responsive portfolio-image" alt="">
                     </div>
                 </div>
             </div>
