--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="row text-center content-row">
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".2s">
                     <div class="about-content">
-                        <i class="fa fa-laptop fa-4x"></i>
+                        <i class="fa fa-heartbeat fa-4x"></i>
                         <h3>Biomedical Engineering</h3>
                         <p>Columbia University</p>
                     </div>
@@ -145,14 +145,14 @@
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
-                        <i class="fa fa-camera-retro fa-4x"></i>
+                        <i class="fa fa-wrench fa-4x"></i>
                         <h3>Robotics</h3>
                         <p>Honeybee Robotics</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
-                        <i class="fa fa-paint-brush fa-4x"></i>
+                        <i class="fa fa-mortar-board fa-4x"></i>
                         <h3>Education</h3>
                         <p>Coalition for Queens</p>
                     </div>
