--- a/index.html
+++ b/index.html
@@ -76,13 +76,16 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Skills</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#process">Process</a>
+                        <a class="page-scroll" href="#quote">The Way</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Work</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -98,7 +101,7 @@
             <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
             <div class="brand-name">John Smith</div>
             <hr class="colored">
-            <div class="brand-name-subtext">An Online Portfolio For Creatives</div>
+            <div class="brand-name-subtext">-</div>
         </div>
         <div class="scroll-down">
             <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
@@ -160,7 +163,7 @@
             </div>
         </div>
     </section>
-    <aside class="cta-quote" style="background-image: url('assets/img/creative/bg-aside.jpg');">
+    <aside id="quote" class="cta-quote" style="background-image: url('assets/img/creative/bg-aside.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn">
@@ -171,12 +174,12 @@
                     <p></p>
                     <p> ― Louis Brown, <i>A Radar History of World War II: Technical and Military Imperatives</i></p>
                     <hr class=" colored">
-                    <a class="btn btn-outline-light page-scroll" href="#contact">Let's Find It</a>
+                    <a class="btn btn-outline-light page-scroll" href="#projects">Learn More About My Projects</a>
                 </div>
             </div>
         </div>
     </aside>
-    <section id="work" class="bg-gray">
+    <section id="projects" class="bg-gray">
         <div class="container text-center wow fadeIn">
             <h2>Projects</h2>
             <hr class="colored">
@@ -257,7 +260,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="portfolio">
         <div class="container text-center wow fadeIn">
             <h2>Portfolio</h2>
             <hr class="colored">
@@ -434,7 +437,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
+    <footer id="contact" class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
