--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
             <div class="brand-name">John Smith</div>
             <hr class="colored">
-            <div class="brand-name-subtext">-</div>
+            <div class="brand-name-subtext">Engineer Extraordinaire</div>
         </div>
         <div class="scroll-down">
             <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
@@ -116,8 +116,9 @@
                 <div class="col-md-6 text-center">
                     <h1>Hi, I'm Derek</h1>
                     <hr class="colored">
-                    <p>I am a freelance web designer, developer, and photographer based in San Francisco, California. I have a professional background in graphic design, and a degree in Computer Science from the University of Central California.</p>
-                    <p>Whether your next project is an online store, website for your business, or a simple brochure, I'll be ready to help!</p>
+                    <p>I am an engineer based in New York City. I have a professional background in software engineering, and am pursuing a degree in biomedical engineering from Columbia University.</p>
+                    <p>My interests include biotech, computer vision, machine learning, video game development, and tech education.</p>
+                    <p>My hobbies include classical guitar, blacksmithing, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
                 </div>
             </div>
         </div>
@@ -127,7 +128,7 @@
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
                     <h1>This is what I do</h1>
-                    <p>I provide web design, web development, photography, and graphic design services.</p>
+                    <p>I learn new things and pass on my knowledge to others.</p>
                     <hr class="colored">
                 </div>
             </div>
@@ -187,7 +188,7 @@
         </div>
     </section>
     <section class="portfolio-carousel wow fadeIn">
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-1.jpg')">
+        <div class="item" style="background-image: url('assets/img/creative/portfolio/neuromattersbg-1.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
@@ -205,20 +206,17 @@
                 </div>
             </div>
         </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-2.jpg')">
+        <div class="item" style="background-image: url('assets/img/creative/portfolio/honeybeebg-1.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
-                            <img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <img src="assets/img/client-logos/honeybeelogo-1.png" class="img-responsive client-logo" alt="">
+                            <span class="project-name">Gas Pipe Inspection Robot</span>
+                            <span class="project-description">Trenchless Inspection of Cased Pipes</span>
                             <hr class="colored">
                             <a href="#portfolioModal2" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
                     </div>
                 </div>
             </div>
