--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="container text-center wow fadeIn">
             <h2>Projects</h2>
             <hr class="colored">
-            <p>Here are some of the larger projects that I've worked on in the past.</p>
+            <p>Here are some of the larger projects that I've worked on.</p>
         </div>
     </section>
     <section class="portfolio-carousel wow fadeIn">
@@ -221,20 +221,17 @@
                 </div>
             </div>
         </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-3.jpg')">
+        <div class="item" style="background-image: url('assets/img/creative/portfolio/accesscodebg-1.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
-                            <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <img src="assets/img/client-logos/accesscodelogo-1.png" class="img-responsive client-logo" alt="">
+                            <span class="project-name">iOS Teaching Fellowship</span>
+                            <span class="project-description">Access Code 2.2</span>
                             <hr class="colored">
                             <a href="#portfolioModal3" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
                     </div>
                 </div>
             </div>
