--- a/index.html
+++ b/index.html
@@ -96,15 +96,16 @@
         </div>
         <!-- /.container -->
     </nav>
-    <header style="background-image: url('assets/img/creative/bg-header.jpg');">
+    <header class="video">
+        <div class="overlay"></div>
         <div class="intro-content">
-            <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
-            <div class="brand-name">John Smith</div>
+            <img src="assets/img/profile.png" class="img-responsive img-centered" alt="">
+            <div class="brand-name">Derek Netto</div>
             <hr class="colored">
             <div class="brand-name-subtext">Engineer Extraordinaire</div>
         </div>
-        <div class="scroll-down">
-            <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
+        <div class="scroll-down page-scroll">
+            <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down"></i></a>
         </div>
     </header>
     <section id="about">
