--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <header class="video">
         <div class="overlay"></div>
         <div class="intro-content">
-            <img src="assets/img/profile.png" class="img-responsive img-centered" alt="">
+            <img src="assets/img/alphablock.png" class="img-responsive img-centered" alt="">
             <div class="brand-name">Derek Netto</div>
             <hr class="colored">
             <div class="brand-name-subtext">Engineer Extraordinaire</div>
