--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
                 </div>
             </div>
         </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-4.jpg')">
+        <div class="item" style="background-image: url('assets/img/creative/portfolio/dyslexiabg-3.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
                             <img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <span class="project-name">Focus PDF Reader</span>
+                            <span class="project-description">Empowering Students with Dyslexia</span>
                             <hr class="colored">
                             <a href="#portfolioModal4" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
@@ -284,13 +284,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div id="portfoliolist">
-                        <div class="portfolio identity" data-cat="identity" href="#portfolioModal1" data-toggle="modal">
+                        <div class="portfolio identity" data-cat="identity" href="#portfolioModalBetcoin" data-toggle="modal">
                             <div class="portfolio-wrapper">
                                 <img src="assets/img/portfolio/grid/identity/1.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Generic Inc.</a>
-                                        <span class="text-category">Brand Identity</span>
+                                        <a class="text-title">Betcoin</a>
+                                        <span class="text-category">Objective-C</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -621,6 +621,49 @@
                         </div>
                         <div class="col-lg-12">
                             <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive img-centered" alt="">
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong><a href="http://startbootstrap.com">April 2015</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
+                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Example Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModalBetcoin" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-4.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <img src="assets/img/client-logos/logo-2.png" class="img-responsive img-centered" alt="">
+                            <h2>Betcoin</h2>
+                            <hr class="colored">
+                            <p>Rocketing up? Crashing down? Log your bitcoin predictions and see how often you are correct!</p>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/portfolio/betcoin-app-screen.png" class="img-responsive img-centered" alt="">
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
