--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <hr class="colored">
                     <p>I am an engineer based in New York City. I have a professional background in software engineering, and am pursuing a degree in biomedical engineering from Columbia University.</p>
                     <p>My interests include biotech, computer vision, machine learning, video game development, and tech education.</p>
-                    <p>My hobbies include classical guitar, blacksmithing, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
+                    <p>My hobbies include classical guitar, muay thai boxing, Gundam model building, and memorizing playing cards.</p>
                 </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
                             <span class="project-name">Brain-Computer Interface</span>
                             <span class="project-description">The Link Between Human and Machine</span>
                             <hr class="colored">
-                            <a href="#portfolioModal1" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="#portfolioModalNeuromatters" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
@@ -455,10 +455,6 @@
             <div class="row social">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <li><a href="#"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
-                        </li>
                         <li><a href="https://www.linkedin.com/in/dereknetto"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
                         </li>
                     </ul>
@@ -644,7 +640,52 @@
             </div>
         </div>
     </div>
-    <!-- Example Modal 5 -->
+    <!-- NEUROMATTERS -->
+    <div class="portfolio-modal modal fade" id="portfolioModalNeuromatters" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-1.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <img src="assets/img/client-logos/neuromatterslogo-1.png" class="img-responsive img-centered" alt="">
+                            <h2>Brain-Computer Interface</h2>
+                            <hr class="colored">
+                            <p>Brain-computer interface (BCI) is the link between human and machine.</p>
+                            <p>Develop novel BCI systems for inferring user’s interests, engagement, and preferences that enable delivery of “information that matters.”</p>
+                            <p>Collaborate on projects with Columbia University, City College, UC: San Diego, and the U.S. Army Research Laboratory.</p>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong><a href="http://startbootstrap.com">April 2015</a>
+                                    </strong>
+                                </li>
+                                <li>Service:
+                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BETCOIN -->
     <div class="portfolio-modal modal fade" id="portfolioModalBetcoin" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-4.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
