--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
     <![endif]-->
 </head>
 <!-- Alternate Body Classes: .modern and .vintage -->
-
 <body id="page-top">
     <!-- Navigation -->
     <!-- Note: navbar-default and navbar-inverse are both supported with this theme. -->
@@ -242,11 +241,10 @@
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
-                            <img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">
                             <span class="project-name">Focus PDF Reader</span>
                             <span class="project-description">Empowering Students with Dyslexia</span>
                             <hr class="colored">
-                            <a href="#portfolioModal4" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
+                            <a href="#portfolioModalPDFFocus" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
@@ -319,7 +317,7 @@
                         <!-- PDF FOCUS -->
                         <div class="portfolio apps" data-cat="apps" href="#portfolioModalPDFFocus" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/1.jpg" alt="">
+                                <img src="assets/img/portfolio/grid/apps/dyslexia.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">PDF Focus</a>
@@ -345,7 +343,7 @@
                         <!-- BIOLOGICAL INJECTION SYSTEM -->
                         <div class="portfolio biomedical" data-cat="biomedical" href="#portfolioModalBIS" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/web/3.jpg" alt="">
+                                <img src="assets/img/BIS/BISpic.png" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Biological Injection System</a>
@@ -544,7 +542,7 @@
         </div>
     </div>
     <!-- BETCOIN -->
-    <div class="portfolio-modal modal fade" id="portfolioModalBetcoin" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-4.jpg')">
+    <div class="portfolio-modal modal fade" id="portfolioModalBetcoin" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -571,6 +569,104 @@
             </div>
         </div>
     </div>
+    <!-- Pencraft -->
+    <div class="portfolio-modal modal fade" id="portfolioModalPencraft" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>Pencraft</h2>
+                            <hr class="colored">
+                            <p>The first iOS app ever to use magnetic motion controls!</p>
+                        </div>
+                        <div class="col-lg-12">
+                            <iframe src="https://player.vimeo.com/video/151919110?loop=1&title=0&byline=0&portrait=0" width="800" height="451" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-12">
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                        </div>
+                        <div class="col-lg-12">
+                            <iframe src="https://player.vimeo.com/video/148572937?title=0&byline=0&portrait=0" width="800" height="451" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- PDF FOCUS-->
+    <div class="portfolio-modal modal fade" id="portfolioModalPDFFocus" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>PDF Focus Reader</h2>
+                            <hr class="colored">
+                            <p>Empowering Students With Dyslexia to Succeed</p>
+                        </div>
+                        <div class="col-lg-12">
+                         <h4>1st Place - Diversity in Tech Hackathon</h4>
+                        </div>   
+                        <div class="col-lg-12">
+                            <iframe src="https://player.vimeo.com/video/160543511?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BIOLOGICAL INJECTION SYSTEM -->
+    <div class="portfolio-modal modal fade" id="portfolioModalBIS" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>Biological Injection System</h2>
+                            <hr class="colored">
+                            <p>Nasa Spacesuit Attachment for Mars Mission</p>
+                            <h4>Intravenous Thermal Regulation for Astronauts</h4>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/BIS/obama.jpg" class="img-responsive img-centered" alt="">
+                            <p>Meeting President Obama at Science & Engineering Fair</p>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Core Scripts -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
