--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <!--STARHOARDER-->
                         <div class="portfolio games" data-cat="games" href="#portfolioModalStarHoarder" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/identity/2.jpg" alt="">
+                                <img src="assets/img/STARHOARDER/starhoarder.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">starHOARDER</a>
@@ -434,7 +434,7 @@
                         <!-- HOLIDAY COOKIES -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalHolidayCookies" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/2.jpg" alt="">
+                                <img src="assets/img/ART/HolidayCookiesGOOD.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Holiday Cookies</a>
@@ -447,7 +447,7 @@
                         <!-- Waterfall -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalWaterfall" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/2.jpg" alt="">
+                                <img src="assets/img/.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Waterfall</a>
@@ -460,7 +460,7 @@
                         <!-- Blind Contour Drawing -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalBlindContourDrawing" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/identity/3.jpg" alt="">
+                                <img src="assets/img/ART/THEKING.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">The King of Spades</a>
