--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                         <!--PAO MASTER-->
                         <div class="portfolio games" data-cat="games" href="#portfolioModalPAO" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/web/4.jpg" alt="">
+                                <img src="assets/img/stock.jpeg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">PAO Master</a>
@@ -408,7 +408,7 @@
                         <!--10 Squared-->
                         <div class="portfolio games" data-cat="games" href="#portfolioModal10Squared" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/5.jpg" alt="">
+                                <img src="assets/img/stock.jpeg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">10 Squared</a>
@@ -421,7 +421,7 @@
                         <!--UNREAL HORROR-->
                         <div class="portfolio games" data-cat="games" href="#portfolioModalUnrealHorror" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/portfolio/grid/graphic/5.jpg" alt="">
+                                <img src="assets/img/stock.jpeg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Unreal Horror</a>
@@ -447,7 +447,7 @@
                         <!-- Waterfall -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalWaterfall" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/.jpg" alt="">
+                                <img src="assets/img/stock.jpeg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Waterfall</a>
