--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <!-- Waterfall -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalWaterfall" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/stock.jpeg" alt="">
+                                <img src="assets/img/ART/waterfall.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Waterfall</a>
@@ -636,6 +636,36 @@
             </div>
         </div>
     </div>
+    <!-- WATERFALL -->
+    <div class="portfolio-modal modal fade" id="portfolioModalWaterfall" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <h2>Waterfall</h2>
+                            <hr class="colored">
+                            <h4>March 2015</h4>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/ART/waterfallbig.JPG" class="img-responsive img-centered" alt="">
+                            <p>acrylic on canvas</p>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- BIOLOGICAL INJECTION SYSTEM -->
     <div class="portfolio-modal modal fade" id="portfolioModalBIS" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
         <div class="modal-content">
