--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                         <!-- Waterfall -->
                         <div class="portfolio art" data-cat="art" href="#portfolioModalWaterfall" data-toggle="modal">
                             <div class="portfolio-wrapper">
-                                <img src="assets/img/ART/waterfall.jpg" alt="">
+                                <img src="assets/img/ART/waterfall.JPG" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Waterfall</a>
