--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                             </div>
                         </div>
                         <!--STARHOARDER-->
-                        <div class="portfolio games" data-cat="games" href="#portfolioModalStarHoarder" data-toggle="modal">
+                        <div class="portfolio games" data-cat="games" href="#portfolioModalstarHOARDER" data-toggle="modal">
                             <div class="portfolio-wrapper">
                                 <img src="assets/img/STARHOARDER/starhoarder.jpg" alt="">
                                 <div class="caption">
@@ -632,6 +632,47 @@
                         </div>   
                         <div class="col-lg-12">
                             <iframe src="https://player.vimeo.com/video/160543511?title=0&byline=0&portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- STARHOARDER -->
+    <div class="portfolio-modal modal fade" id="portfolioModalstarHOARDER" tabindex="-1" role="dialog" aria-hidden="true" style="background-image: url('assets/img/creative/portfolio/bg-blackwood.jpg')">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <img src="assets/img/client-logos/neuromatterslogo-1.png" class="img-responsive img-centered" alt="">
+                            <h2>starHOARDER</h2>
+                            <hr class="colored">
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/STARHOARDER/starhoardertitleQ.png" class="img-responsive img-centered" alt="">
+                            <p>You are a popsicle stick floating through space.<br />Your goal is to collect stars.</p>
+                            <p>starHOARDER<br />1 second. 1 star.</p>
+                        </div>
+                       <div class="col-lg-12">
+                            <p></p>
+                            <p></p>
+                            <p></p>
+                        </div>
+                        <div class="col-lg-12">
+                            <img src="assets/img/STARHOARDER/starHOARDERdownloads.png" class="img-responsive img-centered" alt="">
+                        </div>
+                        <div class="col-lg-12">
+                            <p>starHOARDER was featured in the iOS App Store from Aug 2014 - Aug 2015.<br />It was downloaded 113 times worldwide.</p>
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
